...
            android:id="@+id/connection_settings"
            android:icon="@drawable/ic_connection_settings"
            android:title="Connection Settings" />
        <item
            android:id="@+id/media_settings"
            android:icon="@drawable/ic_media_settings"
            android:title="Media Settings" />
        <item
            android:id="@+id/security_settings"
            android:icon="@drawable/ic_security_settings"
            android:title="Security Settings" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
    </group>

...
